[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-parser"
version = "0.2.0"
description = "CLI tool that extracts and enriches company data from Markdown notes and outputs structured JSON."
authors = [
    {name = "Vitaly Chapyolkin", email = "vitaly.chapyolkin@gmail.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "async-timeout>=4.0",
    "spacy>=3.7",
    "spacy-transformers>=1.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",
    "anthropic>=0.26",
    "python-json-logger>=2.0",
]

[project.scripts]
volt-parser = "volt_parser.cli:main"