[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-parser"
version = "0.2.0"
description = "CLI that extracts companies from Markdown and enriches via WikiData/Wikipedia with optional Anthropic fallback."
authors = [
    {name = "Vitaly Chapyolkin", email = "vitaly.chapyolkin@gmail.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "async-timeout>=4.0",
    "spacy>=3.7",
    "spacy-transformers>=1.2",
    "tenacity>=8.2",
    "rapidfuzz>=3.6",
    "click>=8.1",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "rich>=13.7",
]

[project.optional-dependencies]
llm = ["anthropic>=0.7"]

[project.scripts]
volt-parser = "volt_parser.cli:main"