# pyproject.toml  ── merged
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volt-parser"
version = "0.2.0"
description = "CLI tool that extracts company names from Markdown/notes, enriches them via WikiData & Wikipedia (with optional Anthropic web-search fallback), and outputs schema-validated JSON."
authors = [
    { name = "Vitaly Chapyolkin", email = "vitaly.chapyolkin@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "aiohttp>=3.9",
    "async-timeout>=4.0",
    "spacy>=3.7",
    "spacy-transformers>=1.2",
    "tenacity>=8.2",
    "rapidfuzz>=3.6",
    "click>=8.1",
    "rich>=13.7",
    "jsonschema>=4.22",
    "pydantic>=2.7",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.26"]

[project.scripts]
volt-parser = "volt_parser.cli:main"